<resources>
    <string name="app_name">My Application003</string>
    <string name="str1">不欢迎你来选课</string>
    <string name="str2">输入学号</string>
    <string name="str3">输入密码</string>
    <string name="str4">登录</string>
    <string name="str5">没有账号？去注册</string>
    <string name="str6">忘记密码？重置密码</string>
    <string name="str7">2024001</string>
    <string name="str8">123456</string>
    <string name="str9">用户名和密码不能为空</string>
    <string name="str10">用户名输入错误</string>
    <string name="str11">密码错误</string>
    <string name="str12">用户名密码正确，登录成功</string>
    <string name="str13">用户名和密码都错误，你也是个人才</string>
    <string name="str14">忘记学号？找回账号</string>
    <string name="str15">当前学期：2026-2027学年第一学期</string>
    <string name="str16">成绩查询</string>
    <string name="str17">退出登录</string>
    <string name="str18">搜索课程名称、教师、教室</string>
    <string name="str19">搜索</string>
    <string name="str20">选课大厅</string>
    <string name="str21">我的课表</string>
    <string name="str22">个人中心</string>
    <string name="str23">选课</string>
    <string name="str24">退选</string>
    <string name="str25">XXX,学号：2024001,学院：计算机学院,专业：软件工程,班级：软工2401班</string>
    <string name="str26">账号信息</string>
    <string name="str27">修改资料</string>
    <string name="str28">修改密码</string>
    <string name="str29">绑定手机</string>
    <string name="str30">选课服务</string>
    <string name="str31">选课记录</string>
    <string name="str32">退课记录</string>
    <string name="str33">系统设置</string>
    <string name="str34">消息通知</string>
    <string name="str35">清除缓存</string>
    <string name="str36">字体大小</string>
    <string name="str37">帮助与反馈</string>
    <string name="str38">意见反馈</string>
    <string name="str39">使用指南</string>
    <string name="str40">常见问题</string>
    <string name="str41">这是我的课表，看什么看</string>
    <string name="str42">全部</string>
    <string name="str43">公共课</string>
    <string name="str44">专业课</string>
    <string name="str45">选修课</string>
    <string name="str46">已选</string>
    <string name="str47">冲突</string>
    <string name="str48">课程数量</string>
    <string name="str49">你已经选这个课了</string>
    <string name="str50">该课满员</string>
    <string name="str51">选课成功</string>
    <string name="str52">你没选这个课</string>
    <string name="str53">退课成功</string>
    <string name="str54">共</string>
    <string name="str55">门，学分共</string>
    <string name="str56">分</string>
    <string name="str57">EN/DE/中文</string>
    <string name="str58">登录成功</string>
    <string name="str59">用户名或者密码错误</string>
    <string name="str60">已经在课表里面，说明已经选了，不需要再选课了</string>
<!--    <string name="str61"></string>-->
<!--    <string name="str62"></string>-->
<!--    <string name="str63"></string>-->
<!--    <string name="str64"></string>-->
<!--    <string name="str65"></string>-->
<!--    <string name="str66">个人中心</string>-->
<!--    <string name="str67"></string>-->
<!--    <string name="str68"></string>-->
<!--    <string name="str69"></string>-->
<!--    <string name="str70"></string>-->
<!--    <string name="str71"></string>-->
<!--    <string name="str72"></string>-->
<!--    <string name="str73"></string>-->
<!--    <string name="str74"></string>-->
<!--    <string name="str75"></string>-->
<!--    <string name="str76"></string>-->
<!--    <string name="str77"></string>-->
<!--    <string name="str78"></string>-->
<!--    <string name="str79"></string>-->
<!--    <string name="str80"></string>-->
</resources>