<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="vertical">
    <!--gravity="top" → 内容靠上

padding="16dp" → 四周都留 16dp 间距-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str20"


        />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/search_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/str18"></EditText>
        <Button
            android:id="@+id/search_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str19"
            />
    </LinearLayout>
    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <Button
        android:id="@+id/all_course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="1dp"
        android:text="@string/str42" />
        <Button
            android:id="@+id/common_course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="1dp"
            android:text="@string/str43" />
        <Button
            android:id="@+id/necessary_course"
            android:layout_width="wrap_content"
            android:padding="1dp"
            android:layout_height="wrap_content"
             android:text="@string/str44" />
        <Button
            android:id="@+id/choice_course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="1dp"
            android:text="@string/str45" />
        <Button
            android:id="@+id/selected_course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="1dp"
            android:text="@string/str46" />
        <Button
            android:id="@+id/conflict_course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="1dp"
            android:text="@string/str47" />
    </LinearLayout>
    </HorizontalScrollView>

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal">-->
<!--    <TextView-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="课"-->

<!--        />-->
<!--    </LinearLayout>-->
<!--    选课大厅里不再是干巴巴的文字，而是5条课程数据（课程名、教师、学分、余量）。-->
<!--    数据类 Course - 构造函数、成员变量    RecyclerView 布局-->
<!--    Adapter - 继承、泛型、ViewHolder 模式、三个必须重写的方法-->
<!--    Fragment 中使用 RecyclerView - findViewBydView、LayoutManager、Adapter    List、ArrayList-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycourse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    </LinearLayout>
</LinearLayout>
</ScrollView>