<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"  >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp" >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#FFFFFF"
            android:layout_margin="16dp"
            >
            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/str22"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/pro_name"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    />
                <TextView
                    android:id="@+id/pro_userid"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    />
                <TextView
                    android:id="@+id/pro_college"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    />
                <TextView
                    android:id="@+id/pro_major"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    />
                <TextView
                    android:id="@+id/pro_banji"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#FFFFFF"
            android:layout_margin="16dp" >
            <Button
                android:id="@+id/search_infro"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/str26"
                />
            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/update_infro"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/str27"
                    />
                <Button
                    android:id="@+id/updat_passwd"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/str28"
                    />
                <Button
                    android:id="@+id/tie_phone"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/str29"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#FFFFFF"
            android:layout_margin="16dp" >
            <Button
                android:id="@+id/chosecourse"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/str30"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/search_selection"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/str31"
                    />
                <Button
                    android:id="@+id/delete_selection"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/str32"
                    />
                <Button
                    android:id="@+id/search_score"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/str16"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#FFFFFF"
            android:layout_margin="16dp" >
            <Button
                android:id="@+id/system_setting"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/str33"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/message_notify"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str34"
                    />
                <Button
                    android:id="@+id/clear_cache"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/str35"
                    />
                <Button
                    android:id="@+id/font_size"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/str36"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#FFFFFF"
            android:layout_margin="16dp" >
            <Button
                android:id="@+id/help_feedback"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/str37"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/feedback"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str38"
                    />
                <Button
                    android:id="@+id/user_guide"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str39"
                    />
                <Button
                    android:id="@+id/faq"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str40"
                    />
            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str17"
            />
    </LinearLayout>

</ScrollView>